# PydiatR

./: README.md  pyproject.toml
.github/workflows/: python-package.yaml  python-pre-publish.yaml  python-publish.yaml
example_notebooks/: create_user_simple.ipynb
pydiatr/: handler.py
pydiatr/cli/: main.py
pydiatr/cli/callables/: handler_callables.py  registry_callables.py
pydiatr/cli/templates/: handler_template.py.jinja2  registry_template.py.jinja2  templates.py
tests/: test_handler.py
