[tool.poetry]
name = "pydiatr"
version = "0.2.0"
description = ""
authors = ["gage russell"]
readme = "README.md"
packages = [{include = "pydiatr"}]

[tool.poetry.scripts]
pydiatr = "pydiatr.cli.main:cli"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pre-commit = "^3.8.0"

[tool.poetry.group.cli]
optional = true

[tool.poetry.group.cli.dependencies]
click = "^8.1.7"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
